objects/ARTest1__c.object
<CustomObject>
    <fields>
        <fullName>Date_Field__c</fullName>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Field__c</fullName>
        <label>Email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_field__c</fullName>
        <label>Phone field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Text_field__c</fullName>
        <label>Text field</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numb_field__c</fullName>
        <label>numb field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ARTest1</label>
    <nameField>
        <label>ARTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>